--- a/services/images/style1.css
+++ b/services/images/style1.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 body {background-color: #0D1B2B; overflow-x: hidden; font-family: roboto; -webkit-font-smoothing: antialiased; margin: 0;}
-.flex { display: -webkit-flex; display: flex; -webkit-flex-direction: row;  flex-direction: row; -webkit-justify-content: flex-start; justify-content: flex-start;}
+.flex { display: -webkit-flex; transition: 1.5s; display: flex; -webkit-flex-direction: row;  flex-direction: row; -webkit-justify-content: flex-start; justify-content: flex-start;}
 
 .slider-wrapper div {position: relative;}
 .slider-wrapper {margin-top: 15vw;  margin-left: 11vw;}
