--- a/Template/services.html
+++ b/Template/services.html
@@ -3,33 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
-    <title>Services</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.rtl.min.css" integrity="sha384-5/ZcxA7Dub2FNG09dHw8CHmPN7Fz6ASlweagj0nuXjmMyupgH9n9F5Hd926zsu3/" crossorigin="anonymous">
+    <link rel="stylesheet" href="images/style.css">
 </head>
 <body>
-
-    <!-- Navbar -->
-     <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="#">Logo</a>
+    <nav class="navbar navbar-expand-lg">
+        
+        <img src="images/logo.jpg" alt="logo"  height="80" width="80" object-fit="contain"><b>LOGO</b>
         <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
           <div class="navbar-nav text-center">
-            <a class="nav-item nav-link active" href="home.html">Home <span class="sr-only"></span></a>
-            <a class="nav-item nav-link active" href="services.html">Services <span class="sr-only"></span></a>
-            <a class="nav-item nav-link active" href="contact.html">Contact <span class="sr-only"></span></a>
-            <a class="nav-item nav-link active" href="privacy.html">Privacy <span class="sr-only"></span></a>
+            <a class="nav-item nav-link active" href="home.html"><b>Home</b> <span class="sr-only"></span></a>
+            <a class="nav-item nav-link active" href="services.html"><b>Services</b> <span class="sr-only"></span></a>
+            <a class="nav-item nav-link active" href="contact.html"><b>Contact</b> <span class="sr-only"></span></a>
+            <a class="nav-item nav-link active" href="privacy.html"><b>Privacy</b> <span class="sr-only"></span></a>
           </div>
         </div>
       </nav>
+     
+    <div class="slider">
+<div class="slider-wrapper flex">
+	
+	<div class="slide flex">
+		<div class="slide-image slider-link next"><img src="images/blog.jpg"><div class="overlay"></div></div>
+		<div class="slide-content">
+			<div class="slide-title"><h5>Need help finding a Web Designer?</h5></div>
+			<div class="slide-text"><p class="p3">Let us know about the type of website you’d like to create. Are you looking to redesign an existing website, or create a new one? Do you have a preference on web design? We’ll reach out to the best web designers near you.</p> 
+			<div class="slide-more"><a href="#" class="my-button">EXPLORE</a></div>
+		</div>	
+		</div>
+	</div>	
+	<div class="slide flex">
+		<div class="slide-image slider-link next"><img src="images/coffee.jpg"><div class="overlay"></div></div>
+		<div class="slide-content">
+			<div class="slide-title"><h5>Get free web design quotes</h5></div>
+			<div class="slide-text"><p>With a mix of freelance web designers and web design agencies near you, Bark will send you quotes from web designers who are passionate about web design and want to work with you. Opt for real time notifications or simply browse your free quotes in your own time. </p>
+		   <div class="slide-more"><a href="#" class="my-button">EXPLORE</a></div>
+		</div>	
+		</div>
+	</div>
+		<div class="slide flex">
+		<div class="slide-image slider-link next"><img src="images/game.jpg"><div class="overlay"></div></div>
+		<div class="slide-content">
+			<div class="slide-title"><h5>Hire a web designer</h5></div>
+			<div class="slide-text"><p class="p3">Hiring a freelance web designer isn’t a decision that should be taken lightly. In our digital world, the internet is the number one tool to connect us. Whatever the purpose of your website, it will be the first impression that visitors have of you, and first impressions count.</p> 
+			<div class="slide-more"><a href="#" class="my-button">EXPLORE</a></div>
+		</div>	
+	</div>
+</div>
+    <div class="slide flex">
+		<div class="slide-image slider-link next"><img src="images/travel.jpg"><div class="overlay"></div></div>
+		<div class="slide-content">
+			<div class="slide-title"><h5>Looking for other Business Services?</h5></div>
+			<div class="slide-text"><p class="p3">Whether you're looking for SEO Consultants, Social Media Experts or Freelance App Developers, there will be a certified professional near you on Bark.<br>All of them are determined for you to succeed in your business. View all our Design and Digital Marketing services.</p> 
+			<div class="slide-more"><a href="#" class="my-button">EXPLORE</a></div>
+		</div>
+	</div>	
+	</div>
+    <div class="slide flex">
+		<div class="slide-image slider-link next"><img src="images/pic2.jpg"><div class="overlay"></div></div>
+		<div class="slide-content">
+			<div class="slide-title"><h5>Hear from a professional</h5></div>
+			<div class="slide-text"><p class="p3">We’re specialists in tech startups. All three of us in the team have worked for high growth startups, so we wanted to make sure that we used our expertise in this sector. The great thing is that they are usually more receptive to new ideas or design styles.</p>
+			<div class="slide-more"><a href="#" class="my-button">EXPLORE</a></div>
+		</div>
+		</div>	
+	</div>
+</div>
 
-      <!-- Services -->
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+<script src="script.js"></script>
+<footer>
+    <p style="color: black;"><b>&copy; 2023 Your Company. All rights reserved.</b></p>
+  </footer>
 
-      <!-- Footer -->
-      <footer>
-        <p>&copy; 2023 Your Company. All rights reserved.</p>
-      </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
