--- a/Template/home.html
+++ b/Template/home.html
@@ -1,78 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="images/style.css">
-    <title>Home</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link rel="stylesheet" href="images/style.css">
+  <title>Home</title>
 </head>
 <body>
 
     <!-- Navbar -->
      <nav class="navbar navbar-expand-lg">
-        <img src="images/logo.jpg" alt="logo"  height="80" width="80" object-fit="contain"><b>LOGO</b>
+      <img class ="site-logo" src="./images/logo.jpg">
         <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
           <div class="navbar-nav text-center">
-            <a class="nav-item nav-link active" href="home.html"><b>Home</b> <span class="sr-only"></span></a>
-            <a class="nav-item nav-link active" href="services.html"><b>Services</b> <span class="sr-only"></span></a>
-            <a class="nav-item nav-link active" href="contact.html"><b>Contact</b> <span class="sr-only"></span></a>
-            <a class="nav-item nav-link active" href="privacy.html"><b>Privacy</b> <span class="sr-only"></span></a>
+            <a class="nav-item nav-link active" href="home.html">Home <span class="sr-only"></span></a>
+            <a class="nav-item nav-link active" href="services.html">Services <span class="sr-only"></span></a>
+            <a class="nav-item nav-link active" href="contact.html">Contact <span class="sr-only"></span></a>
+            <a class="nav-item nav-link active" href="privacy.html">Privacy <span class="sr-only"></span></a>
           </div>
         </div>
       </nav>
 
       <!-- Home -->
-      <h1 class="title" style="font-family:monospace">About Us</h1><br>
+      <h1 class="title">Home page - Meet the team</h1>
       <div class="main-home">
         <div class="boxes">
-          <div class="Box" style="font-family:cursive">DUAL IT was born out of the increasing need for innovation that companies, big or small, encountered. Driven by deep knowledge, enthusiasm and curiosity, we are committed to our mission: help businesses simplify their lives by delivering the best software for specific needs.
-            As a result, we gathered an experienced team, capable of establishing fair partnerships alongside delivering the best code possible, so that our clients can see real improvements in their business.Our mission is to empower businesses and individuals by creating exceptional websites that leave a lasting impression.</div>
-          <div class="Box" style="font-family:cursive">Our company values are: excellence, integrity, collaboration, innovation and a client-centric approach. Although we excel at developing custom software development projects, we can just as well perform our best as a nearshore partner.
-            From seamless integration of automated processes to designing & building customer-centric technology solutions, we are always ready for a new challenge.</div>
+          <div class="Box">Our mission is to empower businesses and individuals by creating exceptional websites that leave a lasting impression.</div>
+          <div class="Box">Our company values are: excellence, integrity, collaboration, innovation and a client-centric approach</div>
         </div>
-        <img class ="home-img" src="images/meetingIMG.jpg" style="border: 5px solid #555;">
+        <img class ="home-img" src="./images/meetingIMG.jpg">
       </div>
       <div class="team">
-      <h2><center style="font-family:monospace">The Team</center></h2>
+      <h2><center>The Team</center></h2>
       </div>
       <div id="Team-cast">
         
    
        <div class="Team-member">
-           <img  src="images/Danny.png" style="width: 40%;" class="img-responsive img-thumbnail" alt="./resources/home-page/place-holder.png" />
+           <img  src="./images/Danny.png" class="img-responsive img-thumbnail" alt="./resources/home-page/place-holder.png" />
            <div class="name">Danny Landa
-            <br />Danny is a is a professional and talented Product Designer with front end development skills.</div>
+            <br />Description</div>
                
        </div>
        <div class="Team-member">
-           <img src="./resources/home-page/place-holder.png" class="img-responsive img-thumbnail" alt="./resources/home-page/place-holder.png" />
+           <img src="./images/iqra.png" class="img-responsive img-thumbnail" alt="./resources/home-page/place-holder.png" />
            <div class="name">Iqra Zamir
-               <br />Iqra is a Software Developer based in UK, focused on branding, building interactive experiences & creating emotions through design and technology.</div>
+               <br />Description</div>
        </div>
        <div class="Team-member">
-           <img src="./resources/home-page/place-holder.png" class="img-responsive img-thumbnail" alt="./resources/home-page/place-holder.png" />
+           <img src="./images/Kevin.png" class="img-responsive img-thumbnail" alt="./resources/home-page/place-holder.png" />
            <div class="name">Kevin Wong
-               <br />Kevin is a software engineer and founder of the Blogging For Devs community.</div>
+               <br />Description</div>
        </div>
        <div class="Team-member">
-          <img src="./resources/home-page/place-holder.png" class="img-responsive img-thumbnail" alt="./resources/home-page/place-holder.png" />
+          <img src="./images/ben.PNG" class="img-responsive img-thumbnail" alt="./resources/home-page/place-holder.png" />
           <div class="name">Benjamin S.
-            <br />Ben is a DevOps Engineer, Multi-Award Winning Technologist, and Engineer.</div>
+            <br />Description</div>
         </div>
         <div class="Team-member">
-          <img src="images/siree.jpg" style="width: 40%;" class="img-responsive img-thumbnail" alt="./resources/home-page/place-holder.png" />
+          <img src="./images/siree.jpg" class="img-responsive img-thumbnail" alt="./resources/home-page/place-holder.png" />
           <div class="name">Sireeshalatha B.
-              <br />Sireesha is a front-end developer and loves to share helpful content for front-end web devs.</div>
+              <br />Description</div>
         </div>
        
-      </div>      
+      </div>
+    
+
+       
+
+
+      
 
       <!-- Footer -->
       <div  class="spacer"> . </div>
       <footer>
-        <p style="color: black;"><b>&copy; 2023 Your Company. All rights reserved.</b></p>
+        <p>&copy; 2023 Your Company. All rights reserved.</p>
       </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
