--- a/Template/services.html
+++ b/Template/services.html
@@ -64,7 +64,7 @@
 		<div class="slide-content">
 			<div class="slide-title"><h5>Hear from a professional</h5></div>
 			<div class="slide-text"><p class="p3">We’re specialists in tech startups. All three of us in the team have worked for high growth startups, so we wanted to make sure that we used our expertise in this sector. The great thing is that they are usually more receptive to new ideas or design styles.</p>
-			<div class="slide-more"><a href="44.195.78.136" class="my-button">EXPLORE</a></div>
+			<div class="slide-more"><a href="http://44.195.78.136" class="my-button">EXPLORE</a></div>
 		</div>
 		</div>	
 	</div>
