--- a/Template/home.html
+++ b/Template/home.html
@@ -76,8 +76,12 @@
       <!-- Footer -->
       <div  class="spacer"> . </div>
       <footer>
-        <p>&copy; 2023 Your Company. All rights reserved.</p>
+        <p style="color: black;"><b>&copy; 2023 Your Company. All rights reserved.</b></p>
       </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+</body>
+</html>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
