--- a/Template/images/style.css
+++ b/Template/images/style.css
@@ -113,6 +113,9 @@ font-size: larger;
 padding: 15px;
 
 }
+.site-logo{
+  height: 40px;
+}
 footer {
 position: fixed;
 bottom: 0;
@@ -122,6 +125,11 @@ background-color: #f0f0f0;
 padding: 15px;
 text-align: center;
 font-size: large;
+}
+.spacer{
+  background-color: rgb(201, 201, 201);
+  margin-bottom: 110px; /* how high is your footer */
+  color: rgb(201, 201, 201);
 }
 .Box {
   font-size:16px;
@@ -135,7 +143,7 @@ font-size: large;
 }
 .Box:hover{
   transition: 1s;
-  transform: scale(1.15);
+  transform: scale(1.05);
 }
 
 .main-home{
@@ -147,15 +155,16 @@ font-size: large;
 }
 .home-img{
   height: 305px;
+  
 }
 
 
 #Team-cast {
-  
+    
   position: relative;
   overflow: hidden;
   background-color: rgb(201, 201, 201);
-  height: max-content;
+  
   
 }
 
@@ -164,9 +173,10 @@ font-size: large;
   float: left;
   width: 17%;
   margin: 1% 1% 45px 1%;
-  text-align:justify;
   
-  transition: .2s;   
+  transition: .2s;
+  
+  
   
 }
 .img-responsive{
@@ -176,6 +186,7 @@ font-size: large;
 }
 
 .name {
+  font-size: 13px;
   position: absolute;
   bottom: 0px;
   transition: opacity .5s;
@@ -187,7 +198,7 @@ font-size: large;
 }
 .Team-member:hover .img-responsive{
  
-  transform:scale(1.3);
+  transform:scale(1.15);
 }
 
 
