--- a/Template/services.html
+++ b/Template/services.html
@@ -28,7 +28,7 @@
 		<div class="slide-content">
 			<div class="slide-title"><h5>Need help finding a Web Designer?</h5></div>
 			<div class="slide-text"><p class="p3">Let us know about the type of website you’d like to create. Are you looking to redesign an existing website, or create a new one? Do you have a preference on web design? We’ll reach out to the best web designers near you.</p> 
-			<div class="slide-more"><a href="#" class="my-button">EXPLORE</a></div>
+			<div class="slide-more"><a href="https://dannylanda.co.uk/" class="my-button">EXPLORE</a></div>
 		</div>	
 		</div>
 	</div>	
@@ -55,7 +55,7 @@
 		<div class="slide-content">
 			<div class="slide-title"><h5>Looking for other Business Services?</h5></div>
 			<div class="slide-text"><p class="p3">Whether you're looking for SEO Consultants, Social Media Experts or Freelance App Developers, there will be a certified professional near you on Bark.<br>All of them are determined for you to succeed in your business. View all our Design and Digital Marketing services.</p> 
-			<div class="slide-more"><a href="#" class="my-button">EXPLORE</a></div>
+			<div class="slide-more"><a href="http://kevwong.co.uk" class="my-button">EXPLORE</a></div>
 		</div>
 	</div>	
 	</div>
