--- a/Template/contact.html
+++ b/Template/contact.html
@@ -12,7 +12,7 @@
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg">
-    <img src="images/logo.jpg" alt="logo"  height="80" width="80" object-fit="contain"><b>LOGO</b>
+    <img src="images/logo.jpg" alt="logo"  height="80" width="80" object-fit="contain"><b><h1 style="color: black; font: bold;">V</h1>DESIGN</b>
 
     <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
       <div class="navbar-nav text-center">
