--- a/Template/home.html
+++ b/Template/home.html
@@ -12,19 +12,20 @@
 
     <!-- Navbar -->
      <nav class="navbar navbar-expand-lg">
-      <img class ="site-logo" src="./images/logo.jpg">
-        <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+      <img src="images/logo.jpg" alt="logo"  height="80" width="80" object-fit="contain"><b><h1 style="color: black; font: bold;">V</h1>DESIGN</b>
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
           <div class="navbar-nav text-center">
-            <a class="nav-item nav-link active" href="home.html">Home <span class="sr-only"></span></a>
-            <a class="nav-item nav-link active" href="services.html">Services <span class="sr-only"></span></a>
-            <a class="nav-item nav-link active" href="contact.html">Contact <span class="sr-only"></span></a>
-            <a class="nav-item nav-link active" href="privacy.html">Privacy <span class="sr-only"></span></a>
+            <a class="nav-item nav-link active" href="home.html"><b>Home</b> <span class="sr-only"></span></a>
+            <a class="nav-item nav-link active" href="services.html"><b>Services</b> <span class="sr-only"></span></a>
+            <a class="nav-item nav-link active" href="contact.html"><b>Contact</b> <span class="sr-only"></span></a>
+            <a class="nav-item nav-link active" href="privacy.html"><b>Privacy</b> <span class="sr-only"></span></a>
           </div>
         </div>
       </nav>
 
       <!-- Home -->
-      <h1 class="title">Home page - Meet the team</h1>
+      <br>
+      <h1 class="title"><b>OUR MISSION AND VALUES</b></h1>
       <div class="main-home">
         <div class="boxes">
           <div class="Box">Our mission is to empower businesses and individuals by creating exceptional websites that leave a lasting impression.</div>
@@ -33,7 +34,7 @@
         <img class ="home-img" src="./images/meetingIMG.jpg">
       </div>
       <div class="team">
-      <h2><center>The Team</center></h2>
+      <h2><center>Meet The Team</center></h2>
       </div>
       <div id="Team-cast">
         
@@ -41,28 +42,28 @@
        <div class="Team-member">
            <img  src="./images/Danny.png" class="img-responsive img-thumbnail" alt="./resources/home-page/place-holder.png" />
            <div class="name">Danny Landa
-            <br />Description</div>
+            <br />Web and Graphic Designer</div>
                
        </div>
        <div class="Team-member">
            <img src="./images/iqra.png" class="img-responsive img-thumbnail" alt="./resources/home-page/place-holder.png" />
            <div class="name">Iqra Zamir
-               <br />Description</div>
+               <br />Full Stack Developer</div>
        </div>
        <div class="Team-member">
            <img src="./images/Kevin.png" class="img-responsive img-thumbnail" alt="./resources/home-page/place-holder.png" />
            <div class="name">Kevin Wong
-               <br />Description</div>
+               <br />Web Designer</div>
        </div>
        <div class="Team-member">
           <img src="./images/ben.PNG" class="img-responsive img-thumbnail" alt="./resources/home-page/place-holder.png" />
           <div class="name">Benjamin S.
-            <br />Description</div>
+            <br />Team Lead Engineer</div>
         </div>
         <div class="Team-member">
           <img src="./images/siree.jpg" class="img-responsive img-thumbnail" alt="./resources/home-page/place-holder.png" />
           <div class="name">Sireeshalatha B.
-              <br />Description</div>
+              <br />Web Developer</div>
         </div>
        
       </div>
